--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ep_piwik",
-  "description": "Add Piwik to Etherpad Lite -- IMPORTANT: Add the following to your settings.json file --   \"ep_piwik\":{\"url\":\"piwik.installation.com\",\"site_id\":\"1\"}",
+  "description": "Add Piwik to Etherpad Lite -- IMPORTANT: Add the following to your settings.json file --   \"ep_piwik\":{\"url\":\"piwik.installation.com\",\"siteId\":\"1\"}",
   "version": "0.0.4",
   "author": {
     "name": "Alexandre Girard",
